Scale 'Solved!' text and spacing to floor gradient width

--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,5 @@ body {
   left: 5vw;
   width: 90vw;
   height: 70vh;
+  outline: 2px solid #333;
 }
